tests/ui/tool-attributes/tool-attributes-misplaced-1.stderr
error: cannot find derive macro `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:4:10
   |
LL | #[derive(rustfmt)]
   |          ^^^^^^^

error: cannot find derive macro `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:4:10
   |
LL | #[derive(rustfmt)]
   |          ^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: cannot find attribute `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:9:3
   |
LL | #[rustfmt]
   |   ^^^^^^^

error: cannot find macro `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:15:5
   |
LL |     rustfmt!();
   |     ^^^^^^^

error[E0425]: cannot find type `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:1:10
   |
LL | type A = rustfmt;
   |          ^^^^^^^ not found in this scope

error[E0425]: cannot find value `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:14:5
   |
LL |     rustfmt;
   |     ^^^^^^^ not found in this scope

error[E0433]: cannot find module or crate `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:17:5
   |
LL |     rustfmt::skip;
   |     ^^^^^^^ use of unresolved module or unlinked crate `rustfmt`
   |
   = help: you might be missing a crate named `rustfmt`

error[E0433]: cannot find module or crate `rustfmt` in this scope
  --> $DIR/tool-attributes-misplaced-1.rs:2:10
   |
LL | type B = rustfmt::skip;
   |          ^^^^^^^ use of unresolved module or unlinked crate `rustfmt`
   |
   = help: you might be missing a crate named `rustfmt`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
